[package]
name = "rs_graph_layout"
version = "0.1.0"
edition = "2021"

[lib]
name = "rs_graph_layout"
crate-type = ["cdylib"]

[dependencies]
petgraph = "0.6.4"
#rust-sugiyama = { git = "https://github.com/paddison/rust-sugyama.git", branch="no-dummies" }
rust-sugiyama = { path = "../rust-sugiyama" }
pyo3 = { version = "0.19.1", features = ["extension-module"] }
log = "0.4.20"
env_logger = "0.10.0"

[dev-dependencies]
graph_generator = { git = "https://github.com/paddison/graph_generator" }

[build-dependencies]
pyo3-build-config = "0.19.1"
