[package]
name = "rs_graph_layout"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib"]


[dependencies]
petgraph = "0.6.4"
rust-sugiyama = "0.3.0"
pyo3 = { version = "0.21.2", features = ["auto-initialize"] }
log = "0.4.20"
env_logger = "0.10.0"

[dev-dependencies]
criterion = "0.5.1"
graph_generator = { name = "graph_generator", git = "https://github.com/paddison/graph_generator" }

[[bench]]
name = "benches"
harness = false

[features]
benchmark = []
